added two more things in properties file. 1. eureka had a different port number 8761, now just like all other services it can also be opened at 8084. 2. css js was not being loaded so had to add somethings for that